# salvo-admin

./: Cargo.toml  README.md
migrations/2023-08-14-012253_create_menu/: up.sql
src/: main.rs
src/handler/: menu_handler.rs  role_handler.rs  user_handler.rs
src/utils/: auth.rs  jwt_util.rs  mod.rs
src/vo/: menu_vo.rs  mod.rs  role_vo.rs  user_vo.rs
