[package]
name = "salvo-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.67.0" }
tokio = { version = "1", features = ["macros"] }
#tracing = "0.1"
#tracing-subscriber = "0.3"

json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
log4rs = "1.0"

diesel = { version = "2.1.0", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std", "serde"] }

r2d2 = "0.8"
r2d2-diesel = "1.0.0"
once_cell = "1.18.0"

jsonwebtoken = "9.3.0"

redis = "0.25.3"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"

